kubernetes/clusters/cluster-a/apps/api/cuecards-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cuecards-api
  namespace: cuecards
  labels:
    app: cuecards-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cuecards-api
  template:
    metadata:
      labels:
        app: cuecards-api
    spec:
      imagePullSecrets:
        - name: ghcr-secrets
      containers:
      - name: cuecards-api
        image: ghcr.io/grd-1/cuecards-api:e3917fdca4b91a2356c69eb6d38353f33fab3296
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
